--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,12 +1,12 @@
-/* ===== HEADER E NAVEGAÇÃO ===== */
 header nav {
     display: flex;
     position: fixed;
     width: 100%;
     height: 60px;
-    background: rgb(0, 0, 201);
+    background: var(--bg-color);
     justify-content: space-between;
     padding: 0 10px;
+    z-index: 1;
 }
 
 .logo-text-container {
@@ -21,9 +21,9 @@ header nav {
 }
 
 .logo-text {
-    font-size: 24px;
-    font-weight: bold;
-    color: white;
+    font-size: var(--font-size-h3);
+    font-weight: var(--font-weight-bold);
+    color: var(--color-white);
     margin-left: 6px;
 }
 
@@ -34,10 +34,10 @@ header nav {
 }
 
 .menu-toggle {
-    font-size: 30px;
+    font-size: var(--font-size-h1);
     background: none;
     border: none;
-    color: white;
+    color: var(--color-white);
     cursor: pointer;
     position: relative;
 }
@@ -64,10 +64,10 @@ header nav {
 }
 
 .nav-links li a {
-    color: white;
+    color: var(--color-white);
     text-decoration: none;
-    font-weight: bold;
-    font-size: 16px;
+    font-weight: var(--font-weight-bold);
+    font-size: var(--font-size-h4);
     transition: color 0.3s;
 }
 
@@ -84,7 +84,7 @@ header nav {
         left: 0;
         flex-direction: column;
         align-items: center;
-        background: linear-gradient(180deg, rgb(0, 0, 201), rgb(0, 110, 255));
+        background: linear-gradient(180deg, var(--bg-color), var(--bg-color-gradient));
         padding: 15px 0;
         gap: 20px;
         opacity: 0;
@@ -98,9 +98,5 @@ header nav {
         opacity: 1;
         transform: translateY(0);
         pointer-events: auto;
-    }
-
-    .nav-links li a {
-        font-size: 18px;
     }
 }
