--- a/src/pages/interactive-map/map.css
+++ b/src/pages/interactive-map/map.css
@@ -1,18 +1,14 @@
-:root {
-  --nav-h: 60px;
-}
-
 html, body {
   height: 100%;
   width: 100%;
-  font-family: Arial, sans-serif;
+  font-family: var(--font-family-heading);
 }
 
 .navbar {
   top: 0;
   left: 0;
   right: 0;
-  height: var(--nav-h);
+  height: 60px;
   background: #0a2a66;
   display: flex;
   align-items: center;
@@ -37,7 +33,7 @@ html, body {
 /* Mapa ocupa o restante da tela */
 #map {
   position: absolute;
-  top: var(--nav-h);
+  top: 60px;
   left: 0;
   right: 0;
   bottom: 0;
