--- a/src/pages/interactive-map/map.css
+++ b/src/pages/interactive-map/map.css
@@ -12,12 +12,17 @@ html, body {
 
 /* Navbar */
 .navbar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
   width: 100%;
   background-color: #0a2a66;
   padding: 10px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  z-index: 10;
 }
 
 .btn {
