--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -100,3 +100,70 @@ header nav {
         pointer-events: auto;
     }
 }
+
+/* ===== MODAL SOBRE ===== */
+#about-btn, #contact-btn {
+    background: none;
+    border: none;
+    color: var(--color-white);
+    text-decoration: none;
+    font-weight: var(--font-weight-bold);
+    font-size: var(--font-size-h4);
+    cursor: pointer;
+    transition: color 0.3s;
+}
+
+#about-btn:hover, #contact-btn:hover {
+    color: #add8e6;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    width: 80%;
+    max-width: 500px;
+    position: relative;
+    text-align: center;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+    color: #aaa;
+}
+
+.close-btn:hover {
+    color: black;
+}
+
+.modal-content p a {
+    text-decoration: none;
+    color: #007bff;
+    font-weight: bold;
+}
+
+.modal.show {
+    display: flex;
+}
+
+body.modal-open {
+    overflow: hidden;
+}
