--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,6 +28,7 @@ main {
     flex-direction: column;
     align-items: center;
     margin-bottom: 10vh;
+    text-align: center;
 }
 
 .explorar-mapa-btn {
