--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -62,6 +62,7 @@ main {
     gap: 20px;
     background: var(--color-white);
     padding: 24px 0;
+    margin-top: 10vh;
 }
 
 .title-comentarios {
@@ -77,8 +78,8 @@ main {
     align-items: flex-start;
     padding: 10px 12px;
     background: var(--color-white);
-    width: 275px;
-    height: 200px;
+    width: 350px;  /* Aumentando a largura */
+    height: 250px; /* Aumentando a altura */
     border-radius: 18px;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.10), 0 1.5px 4px rgba(0, 0, 139, 0.08);
     transition: 0.2s;
@@ -86,7 +87,7 @@ main {
 
 .comentario-usuario:hover {
     box-shadow: 0 8px 24px rgba(0, 0, 139, 0.13), 0 2px 8px rgba(0, 0, 139, 0.10);
-    transform: scale(1.02);
+    transform: scale(1.05); /* Ajustei o scale para dar mais destaque no hover */
 }
 
 .title {
@@ -116,12 +117,12 @@ main {
 
 .comentario-nome {
     color: var(--text-color);
-    font-size: var(--font-size-h4);
+    font-size: var(--font-size-h3); /* Aumentei o tamanho da fonte */
     font-weight: var(--font-weight-regular);
     font-style: italic;
 }
 
 .comentario-texto {
     color: var(--text-color);
-    font-size: var(--font-size-text);
+    font-size: var(--font-size-h5); /* Aumentei o tamanho da fonte do texto */
 }
