--- a/src/pages/admin/admin.css
+++ b/src/pages/admin/admin.css
@@ -395,6 +395,45 @@ html>body>.login-container {
   background: #f5fbff;
 }
 
+/* Estilo do Modal */
+.image-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Fundo escuro */
+  display: none; /* Inicialmente oculto */
+  justify-content: center;
+  align-items: center;
+}
+
+.image-modal-content {
+  position: relative;
+  width: 60%; /* Tamanho ajustável */
+  max-width: 600px; /* Máximo de 600px */
+  max-height: 600px; /* Máximo de 600px */
+  background-color: white;
+  padding: 20px;
+  box-sizing: border-box;
+  text-align: center;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 30px;
+  color: #000;
+  cursor: pointer;
+}
+
+.modal-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ajusta a imagem para caber no container sem distorção */
+}
+
 @media (max-width: 700px) {
   .comments-container {
     padding: 12px;
